syntax = "proto3";

package trading;

import "google/protobuf/empty.proto";

option go_package = "github.com/ghilbut/test/trading/grpc";

service Trading {
  rpc GetStockList(google.protobuf.Empty) returns (StockListResp) {
  }
}

message Stock {
  string id =1;
  string code = 2;
  string name = 3;
  uint32 total_stock_count = 4;
}

message StockListResp {
  repeated Stock stock_list = 1;
}
